Add many changes